--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ frontend/node_modules/grunt-s3
 frontend/node_modules/stylus
 frontend/grunt-aws.json
 frontend/grunt-aws.json
+frontend/grunt-aws.json
