--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "grunt-cli": "~0.1.6",
-    "stylus": "~0.32.1",
-    "grunt": "~0.4.1",
-    "grunt-contrib-stylus": "~0.5.0",
-    "grunt-s3": "~0.1.0",
-    "grunt-contrib-watch": "~0.3.1"
+    "gulp": "^3.8.10",
+    "gulp-awspublish": "0.0.23",
+    "stylus": "~0.32.1"
   },
   "repository": {
     "type": "git",
